# travel-agent-next

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  contracts.py  parser.py  prompts.py  runtime.py  specialists.py  tool_registry.py
backend/app/agent/workflows/: __init__.py  trip_workflow.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  map.py  poi.py  trip.py
backend/app/core/: __init__.py  config.py  errors.py  observability.py
backend/app/integrations/: __init__.py
backend/app/integrations/llm/: __init__.py  client.py
backend/app/integrations/mcp/: __init__.py  amap_client.py  stdio_client.py
backend/app/integrations/photos/: __init__.py  unsplash_client.py
backend/app/schemas/: __init__.py  map.py  trip.py
backend/app/services/: __init__.py  map_service.py  photo_service.py  trip_service.py
backend/tests/api/: __init__.py  test_map_poi_api_contract.py  test_trip_api_contract.py
backend/tests/unit/: __init__.py  test_agent_parser.py  test_agent_runtime.py  test_amap_mcp_client.py  test_config.py  test_llm_client.py  test_mcp_stdio_client.py  test_observability.py  test_photo_service.py  test_tool_registry.py  test_trip_route.py  test_trip_service.py  test_trip_workflow.py
docs/: README.md
docs/plans/: 2026-03-09-trip-planner-agent-design.md  2026-03-09-trip-planner-agent-implementation.md  (+2 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+18 files in other folders)
